# NeonNote

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
PowerEditor/installer/themes/: DarkModeDefault.xml
PowerEditor/src/: Notepad_plus.cpp  Notepad_plus.h  Notepad_plus.rc  Notepad_plus_Window.cpp  Notepad_plus_Window.h  NppBigSwitch.cpp  NppCommands.cpp  NppDarkMode.cpp  NppIO.cpp  NppNotification.cpp  Parameters.cpp  Parameters.h  menuCmdID.h  resource.h  stylers.model.xml  winmain.cpp
PowerEditor/src/MISC/Common/: NppConstants.h
PowerEditor/src/ScintillaComponent/: FindReplaceDlg.cpp  ScintillaEditView.cpp  ScintillaEditView.h
PowerEditor/src/WinControls/AboutDlg/: AboutDlg.cpp
PowerEditor/src/WinControls/BookmarkBar/: BookmarkBar.cpp  BookmarkBar.h
PowerEditor/src/WinControls/Preference/: preference.rc  preferenceDlg.cpp  preference_rc.h
PowerEditor/src/WinControls/StatusBar/: StatusBar.cpp
PowerEditor/src/WinControls/TabBar/: TabBar.cpp
PowerEditor/visual.net/: notepadPlus.Cpp.props  notepadPlus.vcxproj
src/: AutoScrollHandler.cpp  AutoScrollHandler.h  BookmarkBar.cpp  BookmarkBar.h  EditorWidget.cpp  EditorWidget.h  FindReplaceBar.cpp  FindReplaceBar.h  MainWindow.cpp  MainWindow.h  SearchDialog.cpp  SearchDialog.h  SearchResultsPanel.cpp  SearchResultsPanel.h  StatusBar.cpp  StatusBar.h  TabBar.cpp  TabBar.h  Theme.h  main.cpp
